--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
 - name: Deploy PR
-  # You may pin to the exact commit or the version.
-  # uses: AnandChowdhary/deploy-pr-action@2b343d8602fe72b0de67d6a4d754b688c2ef5013
   uses: AnandChowdhary/deploy-pr-action@v1.5.0
   with:
     # GitHub token
-    token: # optional
+    token: ${{deploy-pr-secret}}
     # Prefix in deployment URL
     prefix: pull-request
     # Path to create robots.txt in
