--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,14 @@
-- name: Deploy PR
-  uses: AnandChowdhary/deploy-pr-action@v1.5.0
-  with:
-    # GitHub token
-    token: ${{DEPLOY_PR_SECRET}}
-    # Prefix in deployment URL
-    prefix: pull-request
-    # Path to create robots.txt in
-    robotsTxtPath: # optional
-    # Directory to deploy
-    distDir: public
-    # Content for robots.txt file
-    robotsContent: # optional
-    # Name of the deployment environment
-    environmentName: # optional
-    # Skip adding the URL comment on PRs
-    skipComment: # optional
-    # Skip adding labels to PRs
-    skipLabels: # optional
-    # Labels to add to PRs
-    labels: # optional
-    # Fail status check if a deploy error occurs
-    failOnDeployError: # optional
+on:
+  pull_request:
+    types: [opened, reopened]
+jobs:
+  test:
+    name: Deploy PR
+    uses: AnandChowdhary/deploy-pr-action@v1.5.0
+    with:
+      # GitHub token
+      token: ${{DEPLOY_PR_SECRET}}
+      # Prefix in deployment URL
+      prefix: pull-request
+      # Directory to deploy
+      distDir: public
