--- a/.github/workflows/deploy-pr.yaml
+++ b/.github/workflows/deploy-pr.yaml
@@ -1,4 +1,5 @@
 name: Deploy PR
+run-name: Deploy to ${{ inputs.deploy_target }} by @${{ github.actor }}
   # You may pin to the exact commit or the version.
   # uses: AnandChowdhary/deploy-pr-action@2b343d8602fe72b0de67d6a4d754b688c2ef5013
   uses: AnandChowdhary/deploy-pr-action@v1.5.0
